@@ -710,6 +710,7 @@
     <File subtype="Code" buildaction="Compile" name="System.Windows.Data/PropertyComparer.cs" />
     <File subtype="Code" buildaction="Compile" name="System.Windows.Data/CollectionViewNode.cs" />
     <File subtype="Code" buildaction="Compile" name="System.Windows.Data/INPCProperty.cs" />
+    <File subtype="Code" buildaction="Compile" name="System.Windows.Data/GroupEnumerator.cs" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
