@@ -1,5 +1,11 @@
 2010-05-07  Alan McGovern  <amcgovern@novell.com>
 
+	* GroupEnumerator.cs:
+	* StandardCollectionView.cs: Add support for enumerating over
+	  the Groups if the CollectionView has been grouped.
+
+2010-05-07  Alan McGovern  <amcgovern@novell.com>
+
 	* StandardCollectionView.cs: Implement support for 'Remove'
 	  and 'RemoveAt'. Fixes another drt 232 subtest.
 
